:bug: fix: 선정된 배틀러의 선택지를 포함하여 응답하도록 수정