@@ -4,9 +4,11 @@ import com.overthecam.battle.domain.Battle;
 import com.overthecam.battle.domain.BattleParticipant;
 import com.overthecam.battle.domain.ParticipantRole;
 import com.overthecam.battle.domain.Status;
+import com.overthecam.battle.dto.BattleBettingInfo;
 import com.overthecam.battle.repository.BattleParticipantRepository;
 import com.overthecam.battle.repository.BattleRepository;
-import com.overthecam.websocket.dto.ChatMessageResponse;
+import com.overthecam.battle.repository.BattleVoteRedisRepository;
+import com.overthecam.websocket.dto.BattlerNotificationDto;
 import com.overthecam.websocket.dto.ParticipantInfo;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -23,7 +25,7 @@ public class BattleWebsocketService {
 
     private final BattleRepository battleRepository;
     private final BattleParticipantRepository participantRepository;
-    private final ChatMessageService chatMessageService;
+    private final BattleVoteRedisRepository battleVoteRedisRepository;
 
     @Transactional
     public Battle updateBattleStatus(Long battleId, Status status) {
@@ -40,16 +42,41 @@ public class BattleWebsocketService {
                 .collect(Collectors.toList());
     }
 
-    public ChatMessageResponse getBattlerNotification(Long battleId) {
-        List<String> battlerNames = participantRepository.findAllByBattleIdWithUser(battleId).stream()
+    public BattlerNotificationDto getBattlerNotification(Long battleId) {
+        List<BattleParticipant> battlers = participantRepository.findAllByBattleIdWithUser(battleId).stream()
                 .filter(p -> ParticipantRole.isBattler(p.getRole()))
-                .map(p -> p.getUser().getNickname())
-                .toList();
+                .collect(Collectors.toList());
 
-        return chatMessageService.sendSystemMessage(
-            String.format("%s님과 %s님 배틀러 선정!\n건강하고 유쾌한 논쟁 되시길 바랍니다!",
-            battlerNames.get(0), battlerNames.get(1)));
+        if (battlers.size() != 2) {
+            throw new RuntimeException("Invalid number of battlers");
+        }
+
+        List<BattleBettingInfo> battlerVotes = battleVoteRedisRepository.getAllVotesForBattle(battleId).stream()
+                .filter(BattleBettingInfo::isBattler)
+                .collect(Collectors.toList());
+
+        return BattlerNotificationDto.builder()
+                .firstBattler(createBattlerInfo(battlers.get(0), battlerVotes))
+                .secondBattler(createBattlerInfo(battlers.get(1), battlerVotes))
+                .build();
     }
+
+    private BattlerNotificationDto.BattlerInfo createBattlerInfo(
+            BattleParticipant battler,
+            List<BattleBettingInfo> battlerVotes) {
+
+        BattleBettingInfo vote = battlerVotes.stream()
+                .filter(v -> v.getUserId().equals(battler.getUser().getId()))
+                .findFirst()
+                .orElseThrow(() -> new RuntimeException("Battler vote not found"));
+
+        return BattlerNotificationDto.BattlerInfo.builder()
+                .userId(battler.getUser().getId())
+                .nickname(battler.getUser().getNickname())
+                .optionId(vote.getVoteOptionId())
+                .build();
+    }
+
 
     private ParticipantInfo convertToParticipantInfo(BattleParticipant participant) {
         return new ParticipantInfo(
